# syrin-pythonmamba

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAMBA_INTEGRATION_README.md  README.md  openmemory.md  pre-commit.sh  pyproject.toml
docs/: ARCHITECTURE.md  README.md  advanced-topics.md  agent-with-memory.md  audit.md  budget-control.md  checkpoint.md  circuit-breaker.md  concept-map.md  context.md  dependency-injection.md  dynamic-pipeline.md  event-bus.md  extension-points.md  faq.md  getting-started.md  guardrails.md  hitl.md  mcp.md  memory.md  multi-agent.md  observability.md  playground.md  prompts.md  ratelimit.md  reference.md  research-agent-with-tools.md  serving.md  simple-qa-agent.md  streaming.md  structured-output.md
docs/agent/: README.md  api-reference.md  budget.md  checkpointing.md  creating-agents.md  events-hooks.md  guardrails.md  handoff-spawn.md  loops.md  memory.md  properties.md  response-object.md  running-agents.md  running.md
docs/multi-agent/: a2a.md  agent-authority.md  agent-router.md  authority.md  budget-delegation.md  consensus.md  hierarchy.md  memory-bus.md  monitor-loop.md  monitor.md  overview.md  pipeline.md  swarm.md  when-to-use.md
docs/reference/: enums.md
docs/security/: agent-identity.md
examples/: README.md  getting_started.ipynb
examples/01_minimal/: agent_with_budget.py  agent_with_tools.py  basic_agent.py  quick_run.py  response_object.py
examples/02_tasks/: multiple_tasks.py  single_task.py  task_with_output_type.py
examples/03_budget/: basic_budget.py  budget_persistence.py  budget_reallocation.py  enterprise_budget.py  rate_limits.py  shared_budget.py  thresholds.py  token_limits.py
examples/04_memory/: README.md  async_memory.py  basic_memory.py  chroma_memory.py  consolidate.py  export_import_memory.py  memory_types_and_decay.py  postgres_memory.py  qdrant_memory.py  recall.py  redis_memory.py
examples/05_tools/: structured_output.py  toon_format.py
examples/06_loops/: all_loop_strategies.py
examples/07_multi_agent/: README.md  __init__.py  agent_authority.py  agent_broadcast.py  agent_router.py  budget_delegation.py  dynamic_pipeline_basic.py  dynamic_pipeline_full.py  handoff.py  handoff_intercept.py  handoff_spawn_context_visibility.py  hierarchical_swarm.py  monitor_loop.py  pipeline.py  spawn.py  swarm_a2a.py  swarm_authority.py  swarm_consensus.py  swarm_multi_model.py  swarm_orchestrator.py  swarm_parallel.py  swarm_reflection.py  team.py  workflow_conditional.py  workflow_dynamic.py  workflow_lifecycle.py  workflow_nested.py  workflow_parallel.py  workflow_sequential.py  workflow_visualization.py
examples/08_streaming/: README.md  __init__.py  async_agents.py  stream_async.py  stream_sync.py
examples/09_guardrails/: authority_layer.py  guardrail_reports.py  input_output_guardrails.py  intelligence_layer.py  pii_and_evaluation.py
examples/10_observability/: audit_logging.py  comprehensive_tracing.py  events_and_hooks.py  hooks.py  json_logging.py  lifecycle_diagrams.py  reports.py  tracing.py
examples/11_context/: README.md  context_config_demo.py  context_context_mode_demo.py  context_custom_compaction_prompt_demo.py  context_formation_mode_pull_demo.py  context_management.py  context_map_demo.py  context_output_chunks_demo.py  context_proactive_compaction_demo.py  context_runtime_injection_demo.py  context_snapshot_demo.py  context_thresholds_compaction_demo.py
examples/11_mcp/: mcp_client.py  mcp_colocation.py  mcp_select.py  mcp_server_class.py
examples/12_checkpoints/: basic_checkpoint.py  long_running_agent.py
examples/12_remote_config/: README.md  remote_config.py
examples/13_models/: all_providers.py  custom_model.py  switch_model.py
examples/14_prompts/: dynamic_prompt.py  persona_prompt.py  prompt_decorator.py
examples/15_advanced/: README.md  agent_inheritance.py  circuit_breaker.py  config.py  dependency_injection.py  hitl_approval.py
examples/16_serving/: README.md  chatbot.py  chatbot_memory.db  cli_serve.py  discovery_override.py  http_serve.py  mount_on_existing_app.py  multi_agent_router.py  playground_checkpoints.py  playground_examples.md  playground_guardrails.py  playground_multi_agent.py  playground_single.py  stdio_serve.py  stress_test_remote_config.py
examples/17_routing/: openrouter_single_key.py
examples/18_multimodal/: README.md
examples/19_knowledge/: __init__.py  agentic_rag.py  chunking.py  full_rag_lifecycle.py  knowledge_agent.py  loaders_and_document.py  postgres_backend.py  serve_agentic_postgres.py  vector_store.py
examples/21_debug_multiagent/: pry_swarm.py
examples/22_watch/: cron_trigger.py  multi_protocol.py  pipeline_watch.py  queue_trigger.py  webhook_trigger.py
examples/models/: quickstart.py
examples/serving/: README.md  http_serve.py  mount_on_existing_app.py
src/syrin/: __init__.py  _exports.py  domain_events.py  enums.py  hooks.py  loop.py  patch_loop.py  patch_loop2.py  run_context.py  template.py  threshold.py
src/syrin/agent/: __init__.py  _budget_ops.py  _checkpoint.py  _construction.py  _context_builder.py  _core.py  _helpers.py  _memory_api.py  _prompt_build.py  _run.py  _run_context.py  _spawn.py  _tool_exec.py  agent_router.py  builder.py  multi_agent.py  pipeline.py  presets.py
src/syrin/audit/: __init__.py  backend.py  handler.py  (+2 more)
tests/core_stability/: test_checkpoint_triggers.py  test_edge_cases.py  test_memory_stability.py  test_rate_limit_actions.py  test_response_contract.py  test_spawn_contract.py
tests/e2e/: test_e2e_edge_cases.py  test_e2e_full_workflow.py  test_e2e_multi_agent.py
tests/hooks/: test_hooks.py
tests/integration/: test_agent_integration.py  test_agent_lifecycle.py  test_checkpoint_triggers.py  test_circuit_breaker_agent.py  test_edge_cases.py  test_loop_strategies_stability.py  test_memory_stability.py  test_rate_limit_actions.py  test_remaining_v0110.py  test_structured_output.py
tests/loop/: test_loop.py
tests/stress/: test_memory_bus_concurrency.py
tests/unit/: test_api_surface.py  test_concurrency_safety.py  test_infrastructure.py  test_stress_performance.py
(+196 files in other folders)
